updates from tech, content etc to resolve issue from testing

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -16,6 +16,14 @@
       <p class="govuk-body">This is the prototype to let judges, panel members, legal advisors, solicitors, paralegals manage cases.</p>
 
 
+      <h2 class="govuk-heading-l">Search for a case</h2>
+
+      <p><a  href="/searchcases">View search for a case pages</a></p>
+
+
+
+
+
 <!-- Latest design -->
 
       <h2 class="govuk-heading-l">Latest iteration - Notice of change</h2>
