--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -13,11 +13,31 @@
             Search cases prototype
         </h1>
 
+        <div style=" margin-top: 20px;">
+            <h2 class="govuk-heading-m">Pages</h2>
 
-        <h2 class="govuk-heading-m">User testing - Starting April 2021</h2>
-        <div style="display: flex; margin-top: 10px;">
+            <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&">Search input</a></p>
+
+            <p><a  target="_blank"    href="/searchcases/pages/loading-screen-no-results.html">No results</a></p>
+            <p><a  target="_blank"    href="/searchcases/pages/loading-screen?&usertype=staff&results=one&">One results</a></p>
+            <p><a  target="_blank"    href="/searchcases/pages/loading-screen?usertype=staff&results=three&">Three results</a></p>
+            <p><a  target="_blank"     href="/searchcases/pages/loading-screen?usertype=judiciary&results=challengedandspecific&">Judiciary &nbsp;-&nbsp; Results &nbsp;-&nbsp; Challenged and specific access</a></p>
+
+            <p><a  target="_blank"    href="/searchcases/pages/results?usertype=staff&results=many&">140 results</a></p>
+            <p><a  target="_blank"    href="/searchcases/pages/loading-screen-time-out.html">Timeout - After 6 seconds</a></p>
+            <p><a  target="_blank"    href="/searchcases/pages/noresults?usertype=staff&.html">Restricted case</a></p>
+
+        </div>
 
 
+
+
+
+
+
+
+        <h2 class="govuk-heading-m" style="display: flex; margin-top: 80px;">User testing - April 2021</h2>
+        <div style="display: flex; ">
 
             <div style="width: 400px;">
                 <h2 class="govuk-heading-s">Social Security and Child Support</h2>
@@ -45,19 +65,6 @@
         </div>
 
 
-        <div style=" margin-top: 100px;">
-            <h2 class="govuk-heading-m">Other links</h2>
-
-            <p><a  href="/searchcases/pages/results?usertype=judiciary&results=challengedandspecific&">Judiciary &nbsp;-&nbsp; Results &nbsp;-&nbsp; Challenged and specific access</a></p>
-
-            <p><a  href="/searchcases/pages/noresults.html">No results</a></p>
-            <p><a  href="/searchcases/pages/results?&usertype=staff&results=one&">One results</a></p>
-            <p><a  href="/searchcases/pages/results?usertype=staff&results=three&">Three results</a></p>
-            <p><a  href="/searchcases/pages/results?usertype=staff&results=many&">140 results</a></p>
-            <p><a  href="/searchcases/pages/toomanyresults.html">Too many results</a></p>
-            <p><a  href="/caseaccess/pages/restricted?usertype=staff&.html">Restricted case</a></p>
-
-        </div>
 
         <div style="display: flex; margin-top: 80px;">
 
