--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -28,7 +28,7 @@ Case details
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25%;">Case</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 20%;">Service</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 18%;">State</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 30%;">Court or hearing centre</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 30%;">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 7%;"></th>
         </tr>
         </thead>
@@ -1024,7 +1024,7 @@ Case details
             <!-- One result -->
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Vanetta Medley<br>0598-5385-1020-1905<br><span style="font-size: 16px; color:#505a5f;">0598-5385-1020-1905</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Vanetta Medley<br><span style="font-size: 16px; color:#505a5f;">0598-5385-1020-1905</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
@@ -1237,15 +1237,9 @@ Case details
                         <a class="hmcts-pagination__link" href="">Previous<span class="govuk-visually-hidden"> set of pages</span></a>
                     </li>
 
-                    <li class="hmcts-pagination__item hmcts-pagination__item--active">1</li>
 
-                    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="#">2</a></li>
+                    <li class="hmcts-pagination__item">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
-                    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="#">3</a></li>
-
-                    <li class="hmcts-pagination__item hmcts-pagination__item--dots">...</li>
-
-                    <li class="hmcts-pagination__item"><a class="hmcts-pagination__link" href="#">10</a></li>
 
                     <li class="hmcts-pagination__item  hmcts-pagination__item--next">
                         <a class="hmcts-pagination__link" href="">Next<span class="govuk-visually-hidden"> set of pages</span></a>
