--- a/app/views/searchcases/pages/timeout.html
+++ b/app/views/searchcases/pages/timeout.html
@@ -15,20 +15,20 @@ Case details
 
     <div class="hmcts-page-heading">
           <div class="hmcts-page-heading__title">
-               <h1 class="govuk-heading-xl">Too many results found</h1>
+               <h1 class="govuk-heading-xl">Something went wrong</h1>
           </div>
     </div>
 
     <p>Try searching again. </p>
 
-    <p>You might be able to get more accurate results by:</p>
+    <p>You might be able to get more accurate results if you:</p>
 
     <ul style="width:700px;">
-        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">searching for as many fields as possible</li>
-        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">using an asterisk (*) in a field you didn't use previously - this will help you to search for one or more unknown characters in any part of a word, for example ‘J* Smith’</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">search for as many fields as possible</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">use an asterisk (*) to search for one or more missing characters in criteria you didn’t use previously, for example 'J* Smith'’</li>
         <!-- <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">adding or removing spaces where necessary</li> -->
 
-        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">correcting any wrong information</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">check you’ve entered all the information correctly</li>
     </ul>
 
 
