--- a/app/views/searchcases/pages/resultspage2.html
+++ b/app/views/searchcases/pages/resultspage2.html
@@ -28,7 +28,7 @@ Case details
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 25%;">Case</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 20%;">Service</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 18%;">State</th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 30%;">Court or hearing centre</th>
+            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 30%;">Location</th>
             <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 " style="width: 7%;"></th>
         </tr>
         </thead>
@@ -278,7 +278,7 @@ Case details
 
 
 
-        {% elif  data.results == 'sscstask4'   %}
+        {% else %}
                 <tbody class="govuk-table__body">
 
                     <tr class="govuk-table__row">
