updates for content

--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -146,7 +146,7 @@ Case details
                         Other reference
                     </label>
                     <div id="otherref-hint" class="govuk-hint" style="width: 900px;">
-                        Any other reference to identify a case, for example National Insurance number or heritage system reference
+                        Any other reference to identify a case, for example National Insurance number or heritage system reference.
                     </div>
                     <input class="govuk-input govuk-input--width-10" id="otherref" name="otherref" type="text" spellcheck="false"  value="{{ data.otherref }}">
                 </div>
