--- a/app/views/searchcases/pages/noresults.html
+++ b/app/views/searchcases/pages/noresults.html
@@ -24,9 +24,10 @@ Case details
     <p>You might be able to get more accurate results if you:</p>
 
     <ul style="width:700px;">
-        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">use an asterisk (*) to search for one or more missing characters in criteria you didn’t use previously, for example 'J* Smith'</li>
-        <!-- <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">adding or removing spaces where necessary</li> -->
         <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">search using different criteria</li>
+        <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">use an asterisk (*) to search for one or more unknown characters in any part of a word, for example ‘J* Smith’</li>
+        <!-- <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">adding or removing spaces where necessary</li> -->
+
         <li style="font-size: 1.1875rem; font-family: 'nta', Arial, sans-serif; -webkit-font-smoothing: antialiased; line-height: 1.31579;">check you’ve entered all the information correctly</li>
     </ul>
 
