multiple results label fix

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -23,7 +23,7 @@
             <p><a  target="_blank"    href="/searchcases/pages/loading-screen?usertype=staff&results=three&">Three results</a></p>
             <p><a  target="_blank"     href="/searchcases/pages/loading-screen?usertype=judiciary&results=challengedandspecific&">Judiciary &nbsp;-&nbsp; Results &nbsp;-&nbsp; Challenged and specific access</a></p>
 
-            <p><a  target="_blank"    href="/searchcases/pages/loading-screen?usertype=staff&results=many&">140 results</a></p>
+            <p><a  target="_blank"    href="/searchcases/pages/loading-screen?usertype=staff&results=many&">2 pages of results</a></p>
             <p><a  target="_blank"    href="/searchcases/pages/loading-screen-time-out.html">Timeout - After 6 seconds</a></p>
             <p><a  target="_blank"    href="/searchcases/pages/noresults?usertype=staff&.html">Restricted case</a></p>
 
