--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajh.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajh.html
@@ -11,8 +11,8 @@ Case details
 <a href="wa-PA-00467-2017-aj" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
+<!-- <span class="govuk-caption-l">Hearing judge</span> -->
+<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
   <form action="#" method="post" onsubmit="usePage(this, 'bob');">
     <div class="govuk-form-group">
       <fieldset class="govuk-fieldset">
@@ -31,7 +31,7 @@ Case details
           <div class="govuk-radios__item">
             <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="wa-PA-00467-2017-ajha">
             <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-              Allocate to another person
+              Allocate to another judge
             </label>
           </div>
         </div>
