--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajha.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajha.html
@@ -11,8 +11,8 @@ Case details
 <a href="wa-PA-00467-2017-ajh" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<span class="govuk-caption-l">Hearing judge</span>
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
+<!-- <span class="govuk-caption-l">Hearing judge</span> -->
+<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
 
 <div class="govuk-form-group">
   <h2 class="govuk-label-wrapper"><label class="govuk-label govuk-label--m" for="event-name">
@@ -28,7 +28,7 @@ Case details
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Continue",
-    href: "wa-PA-00467-2017-ajchk",
+    href: "wa-PA-00467-2017-ajdur",
     classes: "govuk-!-margin-right-3"
   }) }}
 
