--- a/app/views/workallocation/pages/wa-PA-00467-2017-ar.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ar.html
@@ -122,7 +122,7 @@ Case details
 
         </tbody>
     </table>
-    <p><a href="#" class="govuk-link">Allocate a role</a><!--wa-PA-00467-2017-aj--></p>
+    <p><a href="wa-PA-00467-2017-aj" class="govuk-link">Allocate a role</a></p>
         <h2 class="govuk-heading-m">Caseworkers</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
