--- a/app/views/workallocation/pages/wa-PA-00467-2017-ajchk.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-ajchk.html
@@ -11,8 +11,8 @@ Case details
 <a href="wa-PA-00467-2017-ajh" class="govuk-back-link">Back</a>
 {% endblock %}
 {% block content %}
-<h2 class="govuk-heading-l">Allocate a judicial role</h2>
-<h2 class="govuk-heading-m">Check your allocation</h2>
+<h2 class="govuk-heading-l">Allocate a hearing judge</h2>
+<h2 class="govuk-heading-m">Check your answers</h2>
 <div id="event-name-hint" class="govuk-hint">
   Check the information below carefully.
 </div>
@@ -54,6 +54,20 @@ Case details
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="wa-PA-00467-2017-ajha">
+                Change<span class="govuk-visually-hidden"> contact details</span>
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Duration of role
+            </dt>
+            <dd class="govuk-summary-list__value">
+              <p class="govuk-body">Indefinite </p>
+
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="wa-PA-00467-2017-ajdur">
                 Change<span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
