--- a/app/views/workallocation/pages/wa-cases-chk.html
+++ b/app/views/workallocation/pages/wa-cases-chk.html
@@ -22,37 +22,43 @@ Case details
   </div>
 
 </div>
-<table class="govuk-table ">
-<thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Case name</th>
-      <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Case category</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19">Location</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Role</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Access type</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 ">Person</th>
-        <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19 "></th>
-    </tr>
-</thead>
 
-<tbody class="govuk-table__body">
-
-    <tr class="govuk-table__row">
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Libby Mcmahon</a></td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td>
-        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Barringthorn-Wardley</td>
-        <td class="govuk-table__cell"><a href="wa-PA-00467-2017-real" class="right">Change</a></td>
-    </tr>
+<dl class="govuk-summary-list govuk-!-margin-bottom-9 govuk-!-width-three-quarters">
 
 
-</tbody>
-</table>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Person
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">Judge Nordman</p>
+      <p class="govuk-body">judge.nordman@example.com</p>
+    </dd>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="wa-cases-real">
+        Change<span class="govuk-visually-hidden"> contact details</span>
+      </a>
+    </dd>
+  </div>
+  <div class="govuk-summary-list__row">
+    <dt class="govuk-summary-list__key">
+      Duration of role
+    </dt>
+    <dd class="govuk-summary-list__value">
+      <p class="govuk-body">Indefinite </p>
+
+    </dd>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="wa-cases-realdur">
+        Change<span class="govuk-visually-hidden"> contact details</span>
+      </a>
+    </dd>
+  </div>
+</dl>
+
   <div class="govuk-button-group">
   {{ govukButton({
-    text: "Reallocate",
+    text: "Confirm allocation",
     href: "wa-allwork-cases-jb-r",
     classes: "govuk-!-margin-right-3"
   }) }}
