--- a/app/views/workallocation/pages/wa-cases-real.html
+++ b/app/views/workallocation/pages/wa-cases-real.html
@@ -26,7 +26,7 @@ Case details
   <div class="govuk-button-group">
   {{ govukButton({
     text: "Continue",
-    href: "wa-cases-chk",
+    href: "wa-cases-realdur",
     classes: "govuk-!-margin-right-3"
   }) }}
 
