--- a/app/views/workallocation/pages/wa-PA-00321-2018-a.html
+++ b/app/views/workallocation/pages/wa-PA-00321-2018-a.html
@@ -44,7 +44,7 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00321-2018">
+        <a class="govuk-tabs__tab" href="wa-PA-00321-2018-a">
           Tasks
         </a>
       </li>
@@ -110,7 +110,7 @@ Case details
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             <p class="govuk-body"><strong>Generate decision and reasons</strong> <span class="hmcts-badge_right">{{govukTag({
 text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
+classes: "govuk-tag--yellow"
 })}}</span></p>
             <dl class="govuk-summary-list govuk-summary-list--no-border">
               <div class="govuk-summary-list__row">
