--- a/app/views/workallocation/pages/wa-PA-00467-2017-arj.html
+++ b/app/views/workallocation/pages/wa-PA-00467-2017-arj.html
@@ -117,7 +117,7 @@ Case details
 
         <tbody class="govuk-table__body">
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Philips</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
             <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
@@ -139,7 +139,7 @@ Case details
 
         </tbody>
     </table>
-    <p><a href="wa-PA-00467-2017-aj" class="govuk-link">Allocate a role</a></p>
+    <p><a href="#" class="govuk-link">Allocate a role</a></p>
         <h2 class="govuk-heading-m">Caseworkers</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
