--- a/app/views/workallocation/pages/wa-app-confirmation.html
+++ b/app/views/workallocation/pages/wa-app-confirmation.html
@@ -31,7 +31,7 @@ Case details
       <div class="govuk-button-group">
       {{ govukButton({
         text: "Return to My tasks",
-        href: "wa-mytasks",
+        href: "wa-mytasks-c",
         classes: "govuk-!-margin-right-3"
 
       }) }}
