--- a/app/views/workallocation/pages/wa-available-tasks-a.html
+++ b/app/views/workallocation/pages/wa-available-tasks-a.html
@@ -52,7 +52,7 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> tasks</p>
+    <p class="govuk-body">Displaying <strong>4</strong> of <strong>4</strong> tasks</p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -106,6 +106,25 @@ classes: "govuk-tag--yellow"
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review appellant case</td>
+          <td class="govuk-table__cell">{{govukTag({
+text: "dd/mm/yyyy",
+classes: "govuk-tag--grey"
+})}} </td>
+          <!--  <td class="govuk-table__cell">N/A</td> -->
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        </tr>
+        <tr class="govuk-table__row">
+
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hudson Remi</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
+              style="fill: black">
+              <title>This case has more than one task. Review needed.</title>
+              <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
+                    C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
+            </svg></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review application decision</td>
           <td class="govuk-table__cell">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--grey"
