--- a/app/views/workallocation/pages/wa-mytasks-a.html
+++ b/app/views/workallocation/pages/wa-mytasks-a.html
@@ -58,7 +58,7 @@ My work
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Lacey-May Sanders</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-lms">Lacey-May Sanders</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -72,7 +72,7 @@ classes: "govuk-tag--red"
         </tr>
 
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-pj">Patti Jo</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -84,7 +84,7 @@ classes: "govuk-tag--red"
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-hr">Hudson Remi</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
@@ -97,7 +97,7 @@ classes: "govuk-tag--red"
           <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
                                 classes: "govuk-tag--yellow"
                               })}} </td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
       </tbody>
     </table>
