--- a/app/views/workallocation/pages/wa-pj-ra.html
+++ b/app/views/workallocation/pages/wa-pj-ra.html
@@ -15,7 +15,7 @@ Case details
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div>
-      <h1 class="govuk-heading-xl">PA/00467/2017</h1>
+      <h1 class="govuk-heading-xl">PA/01236/2019</h1>
     </div>
     <div style="display: flex; align-items:right">
       <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
@@ -40,17 +40,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-t">
+        <a class="govuk-tabs__tab" href="wa-pj-t">
           Tasks
         </a>
       </li>
        <li class="govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="wa-PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="wa-pj-ra">
           Roles and access
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
+        <a class="govuk-tabs__tab" href="wa-pj">
           Overview
         </a>
       </li>
@@ -111,30 +111,18 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lead Judge</td>
-            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+          <!--          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                 <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
             </tr>
 
-            <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Judge Nordman</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Hearing judge</td>
-          <!--      <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Standard access</td> -->
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">DD/MM/YYYY </td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
-                <td class="govuk-table__cell" style="border-bottom: 1px solid #fff"><a href="wa-PA-00467-2017-arj" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
-            </tr>
 
-            <tr class="govuk-table__row">
 
-              <td colspan="6" class="right"> <a href="wa-PA-00467-2017-real" class="right">Reallocate</a> <a href="#" class="right_tl">Remove allocation</a></td>
-            </tr>
         </tbody>
     </table>
-    <p><a href="wa-PA-00467-2017-aj" class="govuk-link">Allocate a role</a></p>
+    <p><a href="#" class="govuk-link">Allocate a role</a></p>
         <h2 class="govuk-heading-m">Caseworkers</h2>
         <table class="govuk-table ">
         <thead class="govuk-table__head">
@@ -155,7 +143,7 @@ Case details
             <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bisa Butler</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case manager</td>
-            <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
+        <!--            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Standard access</td> -->
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19">DD/MM/YYYY </td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -176,7 +164,7 @@ Case details
             </dd>
           </div>
         </dl>
-        <p><a href="#" class="govuk-link">Add</a></p>
+        <p><a href="wa-PA-00467-2017-coi" class="govuk-link">Add</a></p>
 <!--
         <form action="#">
           <div class="govuk-button-group">
