--- a/app/views/workallocation/pages/wa-available-tasks-c.html
+++ b/app/views/workallocation/pages/wa-available-tasks-c.html
@@ -22,12 +22,12 @@ My work
     <nav class="hmcts-sub-navigation">
       <ul class="hmcts-sub-navigation__list">
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-mytasks">
+          <a class="hmcts-sub-navigation__link" href="wa-mytasks-c">
             My tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-available-tasks">
+          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-available-tasks-c">
             Available tasks
           </a>
         </li>
@@ -43,7 +43,7 @@ My work
         </li>
       </ul>
     </nav>
-    <p class="govuk-body">Displaying <strong>5</strong> of <strong>5</strong> tasks</p>
+    <p class="govuk-body">Displaying <strong>4</strong> of <strong>4</strong> tasks</p>
     <table class="govuk-table ">
       <thead class="govuk-table__head">
         <tr class="govuk-table__row">
@@ -59,22 +59,17 @@ My work
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
 
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Lacey-May Sanders</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Allocate a hearing judge</td>
-          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag({
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lacey-May Sanders</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Allocate a hearing judge</td>
+          <td class="govuk-table__cell">{{govukTag({
 text: "dd/mm/yyyy",
 classes: "govuk-tag--red"
 })}} </td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
-        </tr>
-
-        <tr class="govuk-table__row">
-
-          <td colspan="7" class="right"> <a href="/workallocation/pages/wa-available-tasks-a" class="right">Assign to me</a> <a href="wa-PA-00467-2017-all" class="right_tl">Assign to me and go to task</a></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-available-tasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
 
@@ -123,26 +118,8 @@ classes: "govuk-tag--grey"
           <!--  <td class="govuk-table__cell">N/A</td> -->
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
+        
 
-        <tr class="govuk-table__row">
-
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hudson Remi</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-              style="fill: black">
-              <title>This case has more than one task. Review needed.</title>
-              <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                    C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-            </svg></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review application decision</td>
-          <td class="govuk-table__cell">{{govukTag({
-text: "dd/mm/yyyy",
-classes: "govuk-tag--grey"
-})}} </td>
-          <!--  <td class="govuk-table__cell">N/A</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-        </tr>
 
       </tbody>
     </table>
