--- a/app/views/workallocation/pages/wa-mytasks-ao.html
+++ b/app/views/workallocation/pages/wa-mytasks-ao.html
@@ -58,7 +58,7 @@ My work
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Lacey-May Sanders</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="wa-lms">Lacey-May Sanders</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
@@ -71,11 +71,11 @@ classes: "govuk-tag--red"
           <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-a" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
         </tr>  <tr class="govuk-table__row">
 
-            <td colspan="7" class="right"> <a href="reassign" class="right">Reassign</a> <a href="lms" class="right">Unassign</a> <a href="#" class="right_tl">Go to tasks</a></td>
+            <td colspan="7" class="right"> <a href="reassign" class="right">Reassign</a> <a href="lms" class="right">Unassign</a> <a href="wa-lms-t" class="right_tl">Go to tasks</a></td>
           </tr>
 
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-pj">Patti Jo</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -87,7 +87,7 @@ classes: "govuk-tag--red"
           <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-hr">Hudson Remi</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
