--- a/app/views/workallocation/pages/wa-mytasks-c.html
+++ b/app/views/workallocation/pages/wa-mytasks-c.html
@@ -27,12 +27,12 @@ My work
     <nav class="hmcts-sub-navigation">
       <ul class="hmcts-sub-navigation__list">
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mytasks">
+          <a class="hmcts-sub-navigation__link" aria-current="page" href="wa-mytasks-c">
             My tasks
           </a>
         </li>
         <li class="hmcts-sub-navigation__item">
-          <a class="hmcts-sub-navigation__link" href="wa-available-tasks">
+          <a class="hmcts-sub-navigation__link" href="wa-available-tasks-c">
             Available tasks
           </a>
         </li>
@@ -72,23 +72,18 @@ My work
           text: "dd/mm/yyyy",
           classes: "govuk-tag--red"
         })}}</td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-jo" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/workallocation/pages/wa-hr">Hudson Remi</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
-              style="fill: black">
-              <title>This case has more than one task. Review needed.</title>
-              <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
-                                C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
-            </svg></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-PA-00321-2018">Generate decision and reasons</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-PA-00321-2018-c">Generate decision and reasons</a></td>
           <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
                                 classes: "govuk-tag--yellow"
                               })}} </td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
       </tbody>
     </table>
