--- a/app/views/workallocation/pages/wa-mytasks-jo.html
+++ b/app/views/workallocation/pages/wa-mytasks-jo.html
@@ -7,11 +7,6 @@
 My work
 {% endblock %}
 {% block content %}
-<style>
-  .govuk-width-container {
-    max-width: 1820px;
-  }
-</style>
 <div class="hmcts-page-heading">
   <div class="hmcts-page-heading__title">
     <h1 class="govuk-heading-xl">My work</h1>
@@ -60,36 +55,46 @@ My work
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date</button></th>
           <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 100px;" aria-sort="none"></th>
         </tr>
+
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/workallocation/pages/wa-pj">Patti Jo</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-          <td class="govuk-table__cell"> {{govukTag({
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="/workallocation/pages/wa-pj">Patti Jo</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Review respondent evidence</a></td>
+          <td class="govuk-table__cell"style="border-bottom: 1px solid #fff"> {{govukTag({
           text: "dd/mm/yyyy",
           classes: "govuk-tag--red"
         })}}</td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-jo" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
+          <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+        </tr>
+
+        <tr class="govuk-table__row">
+
+          <td colspan="7" class="right"> <a href="#" class="right">Reassign</a> <a href="#" class="right">Unassign</a> <a href="/workallocation/pages/wa-pj-t" class="right_tl">Go to tasks</a></td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/workallocation/pages/wa-hr">Hudson Remi</a></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" ><a href="/workallocation/pages/wa-hr">Hudson Remi</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >HR</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" >Taylor House</td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" ><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
               style="fill: black">
               <title>This case has more than one task. Review needed.</title>
               <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
             </svg></td>
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="wa-PA-00321-2018">Generate decision and reasons</a></td>
-          <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/workallocation/pages/wa-PA-00321-2018">Generate decision and reasons</a></td>
+          <td class="govuk-table__cell" >{{govukTag ({text: "dd/mm/yyyy",
                                 classes: "govuk-tag--yellow"
                               })}} </td>
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <!--    <td class="govuk-table__cell">N/A<a href="#"></a></td> -->
+          <td class="govuk-table__cell" >&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-o" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
         </tr>
+
+
       </tbody>
     </table>
     {% endblock %}
