--- a/app/views/workallocation/pages/wa-mytasks-o.html
+++ b/app/views/workallocation/pages/wa-mytasks-o.html
@@ -58,7 +58,7 @@ My work
       </thead>
       <tbody class="govuk-table__body">
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/workallocation/pages/wa-pj">Patti Jo</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
@@ -68,10 +68,10 @@ My work
           classes: "govuk-tag--red"
         })}}</td>
           <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
-          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+          <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="/workallocation/pages/wa-mytasks-jo" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
         </tr>
         <tr class="govuk-table__row">
-          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Hudson Remi</a></td>
+          <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="/workallocation/pages/wa-hr">Hudson Remi</a></td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">HR</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
           <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
