--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -88,9 +88,14 @@ Case details
             </span>
         </summary>
         <div class="govuk-details__text" style="width: 780px;">
-            <p>You can use an asterisk (*) to search for one or more unknown characters in any part of a word, for example ‘J* Smith’.</p>
+            <p>You can use an asterisk (*) to search for</p>
+            <ul>
+                <li>one or more unknown characters in any part of a word, for example ‘J* Smith</li>
+                <li>a missing word, for example ‘John *’</li>
+            </ul>
 
-            <p>You can only do this if you’re searching for any of the following:</p>
+
+            <p class="govuk-!-margin-top-7">You can only do this if you’re searching for any of the following:</p>
             <ul>
                 <li>16-digit case reference</li>
                 <li>other reference</li>
