--- a/app/views/searchcases/pages/search.html
+++ b/app/views/searchcases/pages/search.html
@@ -88,7 +88,7 @@ Case details
             </span>
         </summary>
         <div class="govuk-details__text" style="width: 780px;">
-            <p>You can use an asterisk (*) to search for</p>
+            <p>You can use an asterisk (*) to search for:</p>
             <ul>
                 <li>one or more unknown characters in any part of a word, for example ‘J* Smith</li>
                 <li>a missing word, for example ‘John *’</li>
